# Project2EZM

./: .gitignore  CMakeLists.txt  dataGenerator.cpp  generator.py  instructions.md  personalreadme.md
Project2/: BackendService.cpp  BackendService.h  CMakeLists.txt  Project2.qmlproject  main.cpp  qtquickcontrols2.conf
Project2/Project2/: Constants.qml  qmldir
Project2/Project2/designer/: plugin.metainfo
Project2/Project2Content/: App.qml  Screen01.qml
Project2/src/data/: GymRecord.h  loader.cpp  loader.h
Project2/src/structures/: hashmap.cpp  hashmap.h  heap.cpp  heap.h
UntitledProject2/: UntitledProject2.qmlproject
UntitledProject2/UntitledProject2/: Constants.qml  qmldir
UntitledProject2/UntitledProject2/designer/: plugin.metainfo
UntitledProject2/UntitledProject2Content/: App.qml  Screen01.ui.qml
src/: main.cpp
src/bench/: bench.cpp  bench.h
src/data/: GymRecord.h  loader.cpp  loader.h
src/gui/: MainWindow.cpp  MainWindow.h
src/structures/: hashmap.cpp  hashmap.h  heap.h
